--- a/azure-pipelines-octubre-eks21.yml
+++ b/azure-pipelines-octubre-eks21.yml
@@ -17,3 +17,11 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: TerraformTaskV2@2
+  inputs:
+    provider: 'aws'
+    command: 'init'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/configuration/iaac/aws/kubernetes'
+    backendServiceAWS: 'aws-terraform'
+    backendAWSBucketName: 'terraform-backend-state-omarifr'
+    backendAWSKey: 'kubernetes-dev.tfstate'
